<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/offset_18"
    tools:background="@drawable/gradient_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/offset_42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tied"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusForward="@id/password_tied" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_18"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tied"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:nextFocusForward="@id/repeat_password_tied" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_til"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_18"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_tied"
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_repeat_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_b"
        style="@style/AppMainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_20"
        android:text="@string/login_register_button" />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_tv"
        style="@style/SubTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/offset_6"
        android:text="@string/login_about_button"
        android:layout_marginBottom="@dimen/offset_10"
        android:layout_marginTop="@dimen/offset_12"
        android:textFontWeight="500"
        tools:targetApi="p" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/demo_mode_tv"
        style="@style/SubTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/offset_6"
        android:text="@string/login_demo_mode_button"
        android:layout_marginBottom="@dimen/offset_12"
        android:textFontWeight="500"
        tools:targetApi="p" />

    <com.kitelytech.castlelink.core.presentation.ui.widget.FooterView
        android:id="@+id/footer_logo_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" />

</androidx.appcompat.widget.LinearLayoutCompat>